--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -878,13 +878,13 @@ rule ssComp:
                                 break
 
                         elif lineNum == 3:
-                            line2write = makeFeatures(line.strip(),ss_dict["ss3"]) +","
+                            line2write += makeFeatures(line.strip(),ss_dict["ss3"]) +","
                         elif lineNum == 4:
-                            line2write = makeFeatures(line.strip(),ss_dict["ss8"]) +","
+                            line2write += makeFeatures(line.strip(),ss_dict["ss8"]) +","
                         elif lineNum == 5:
-                            line2write = makeFeatures(line.strip(),ss_dict["acc"]) +","
+                            line2write += makeFeatures(line.strip(),ss_dict["acc"]) +","
                         elif lineNum == 6:
-                            line2write = makeFeatures(line.strip(),ss_dict["diso"])
+                            line2write += makeFeatures(line.strip(),ss_dict["diso"])
                         elif lineNum > 6:
                             break
 
